Utilise caption text component
To add course name and code to edit course views (the pages which are editable and don't already have them)

Also remove duplicate text on skilled worker page

--- a/app/views/publish/courses/outcome/edit.html.erb
+++ b/app/views/publish/courses/outcome/edit.html.erb
@@ -19,7 +19,7 @@
                   method: :put do |form| %>
 
       <% course_name_and_code = capture do %>
-        <span class="govuk-caption-l"><%= course.name_and_code %></span>
+        <%= render CaptionText::View.new(text: course.name_and_code) %>
       <% end %>
 
       <%= render "form_fields", form:, course_name_and_code: %>
