--- a/app/views/publish/courses/sites/edit.html.erb
+++ b/app/views/publish/courses/sites/edit.html.erb
@@ -19,8 +19,9 @@
   </div>
 <% end %>
 
+<%= render CaptionText::View.new(text: course.name_and_code) %>
+
 <h1 class="govuk-heading-l">
-  <span class="govuk-caption-l"><%= course.name_and_code %></span>
   Select the locations for this course
 </h1>
 
