--- a/app/views/publish/courses/skilled_worker_visa_sponsorship/_form_fields.html.erb
+++ b/app/views/publish/courses/skilled_worker_visa_sponsorship/_form_fields.html.erb
@@ -1,13 +1,11 @@
 <%= render "publish/shared/error_wrapper", error_keys: [:can_sponsor_skilled_worker_visa], data_qa: "course__can_sponsor_skilled_worker_visa" do %>
-  <fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-      <h1 class="govuk-fieldset__heading">
-        <%= t("page_titles.skilled_worker_visas.new") %>
-      </h1>
-    </legend>
+  <h1 class="govuk-heading-l">
+    <%= t("page_titles.skilled_worker_visas.new") %>
+  </h1>
 
+  <fieldset class="govuk-fieldset">
     <% if @course.pg_teaching_apprenticeship? && !@provider.can_sponsor_skilled_worker_visa %>
-        <p class="govuk-body">Learn more about <%= govuk_link_to "recruiting trainee teachers from overseas", "https://www.gov.uk/guidance/recruit-trainee-teachers-from-overseas-accredited-itt-providers" %>.</p>
+      <p class="govuk-body">Learn more about <%= govuk_link_to "recruiting trainee teachers from overseas", "https://www.gov.uk/guidance/recruit-trainee-teachers-from-overseas-accredited-itt-providers" %>.</p>
     <% end %>
 
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
