--- a/app/views/publish/courses/accredited_body/new.html.erb
+++ b/app/views/publish/courses/accredited_body/new.html.erb
@@ -4,13 +4,12 @@
   <%= govuk_back_link_to(@back_link_path) %>
 <% end %>
 
-<%= render CaptionText::View.new(text: "Add course") %>
-
 <%= render "publish/shared/errors" %>
 
 <fieldset class="govuk-fieldset">
   <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
     <h1 class="govuk-fieldset__heading">
+      <%= render CaptionText::View.new(text: t("course.add_course")) %>
       Who is the accredited body?
     </h1>
   </legend>
