--- a/app/views/publish/courses/sites/new.html.erb
+++ b/app/views/publish/courses/sites/new.html.erb
@@ -4,8 +4,6 @@
   <%= govuk_back_link_to(@back_link_path) %>
 <% end %>
 
-<%= render CaptionText::View.new(text: "Add course") %>
-
 <%= render "publish/shared/errors" %>
 
 <%= form_for course,
@@ -16,6 +14,7 @@
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <h1 class="govuk-fieldset__heading" data-qa="page-heading">
+            <%= render CaptionText::View.new(text: t("course.add_course")) %>
             Select the locations for this course
           </h1>
         </legend>
