--- a/app/views/publish/courses/start_date/new.html.erb
+++ b/app/views/publish/courses/start_date/new.html.erb
@@ -4,11 +4,10 @@
   <%= govuk_back_link_to(@back_link_path) %>
 <% end %>
 
-<%= render CaptionText::View.new(text: "Add course") %>
-
 <%= render "publish/shared/errors" %>
 
 <h1 class="govuk-heading-l">
+  <%= render CaptionText::View.new(text: t("course.add_course")) %>
   When does the course start?
 </h1>
 
