--- a/app/views/publish/courses/subjects/new.html.erb
+++ b/app/views/publish/courses/subjects/new.html.erb
@@ -4,12 +4,11 @@
   <%= govuk_back_link_to(@back_link_path) %>
 <% end %>
 
-<%= render CaptionText::View.new(text: "Add course") %>
-
 <%= render "publish/shared/errors" %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
+    <%= render CaptionText::View.new(text: t("course.add_course")) %>
     <%= form_with url: continue_publish_provider_recruitment_cycle_courses_subjects_path(
                     @provider.provider_code,
                     @provider.recruitment_cycle_year,
