--- a/app/views/find/search/subjects/_secondary_subjects.html.erb
+++ b/app/views/find/search/subjects/_secondary_subjects.html.erb
@@ -1,6 +1,6 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <%= form.govuk_collection_check_boxes :subject_codes, secondary_subjects,
+    <%= form.govuk_collection_check_boxes :subject_codes, secondary_subject_options,
                                           :code, :name, :financial_info, legend: { text: t("find.subjects_page.secondary_title"), size: "l", tag: "h1" } %>
 
     <%= form.govuk_submit "Find courses" %>
