--- a/app/views/publish/courses/skilled_worker_visa_sponsorship/edit.html.erb
+++ b/app/views/publish/courses/skilled_worker_visa_sponsorship/edit.html.erb
@@ -24,6 +24,7 @@
         ) do |f| %>
 
       <%= f.hidden_field :funding_type_updated, value: funding_type_updated? %>
+      <%= f.hidden_field :origin_step, value: origin_step %>
 
       <%= f.govuk_error_summary %>
 
@@ -33,7 +34,7 @@
       </h1>
 
       <% if funding_type_updated? %>
-        <p class="govuk-body"><%= t("visa_sponsorships.updated_funding") %></p>
+        <p class="govuk-body"><%= t("visa_sponsorships.updated.#{origin_step}") %></p>
       <% end %>
 
       <%= f.govuk_radio_buttons_fieldset(:can_sponsor_skilled_worker_visa, legend: { text: "Can your organisation sponsor Skilled Worker visas for this course?", tag: "h1", size: "m" }) do %>
