--- a/app/views/publish/courses/student_visa_sponsorship/edit.html.erb
+++ b/app/views/publish/courses/student_visa_sponsorship/edit.html.erb
@@ -37,9 +37,20 @@
         <p class="govuk-body"><%= t("visa_sponsorships.updated.#{origin_step}") %></p>
       <% end %>
 
+      <% if @course.is_uni_or_scitt? %>
+        <% if !@provider.can_sponsor_student_visa && @provider.university? %>
+          <p class="govuk-body">Learn more about <%= govuk_link_to "recruiting trainee teachers from overseas", "https://www.gov.uk/guidance/recruit-trainee-teachers-from-overseas-accredited-itt-providers" %>.</p>
+        <% end %>
+
+        <% question = "Can your organisation sponsor Student visas for this course?" %>
+      <% else %>
+        <%= render "inset_text" if @course.accrediting_provider.present? %>
+        <% question = "Is Student visa sponsorship available for this course?" %>
+      <% end %>
+
       <%= render "inset_text" if @course.accrediting_provider.present? %>
 
-      <%= f.govuk_radio_buttons_fieldset(:can_sponsor_student_visa, legend: { text: "Is Student visa sponsorship available for this course?", tag: "h1", size: "m" }) do %>
+      <%= f.govuk_radio_buttons_fieldset(:can_sponsor_student_visa, legend: { text: question, tag: "h1", size: "m" }) do %>
         <% course.edit_course_options["can_sponsor_student_visas"].each_with_index do |can_sponsor_student_visa, index| %>
           <%= f.govuk_radio_button(
                 :can_sponsor_student_visa,
