--- a/app/views/find/search/subjects/new.html.erb
+++ b/app/views/find/search/subjects/new.html.erb
@@ -10,7 +10,7 @@
     exclude_keys: ['subject_codes']) %>
 
 
-  <%= render(partial: "primary_subjects", locals: { form: }) if form.object.age_group == "primary" %>
+  <%= render(partial: "primary_subjects", locals: { form: }) if @subjects_form.primary? %>
   <%= render(partial: "secondary_subjects", locals: { form: }) if @subjects_form.secondary? %>
 
 <% end %>
